--- a/API.Seguimiento/appsettings.json
+++ b/API.Seguimiento/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS; Initial Catalog= Prueba;User ID = sa; Password = boom4545 ; Integrated Security=True"
+    "DefaultConnection": "Data Source=localhost; Initial Catalog=DbSeguimiento;User ID=sa;Password=123456;"
   },
   "Logging": {
     "LogLevel": {
