Ultimas modificaciones del api.

--- a/API.Seguimiento/appsettings.json
+++ b/API.Seguimiento/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost; Initial Catalog=DbSeguimiento;User ID=sa;Password=123456;"
+    "DefaultConnection": "Data Source=localhost; Initial Catalog=DbSeguimiento;User ID=sa;Password=P@$$w0rdSAMBHS;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Papertrail": {
+    "host": "logs5.papertrailapp.com",
+    "port": 12582
+  }
 }
